Fix elserj's github acct

--- a/content/_data/contributors.yml
+++ b/content/_data/contributors.yml
@@ -40,9 +40,9 @@
   role: Committer
   org: US Naval Academy
 
-- name: John Elser
+- name: Josh Elser
   apacheId: elserj
-  githubId: elserj
+  githubId: joshelser
   org: 
   role: Mentor
   homepage: 
