--- a/content/_config.yml
+++ b/content/_config.yml
@@ -23,8 +23,9 @@ exclude: [README.md,Gemfile*]
 keep_files: [".git", ".svn", "apidocs"]
 
 # The base path where the website is deployed
-baseurl: / 
+baseurl: /
 # baseurl: /Users/cs/adina/ryawebsite/target/
 
+url: http://rya.apache.org
 # End _config.yml
 
