--- a/content/Gemfile
+++ b/content/Gemfile
@@ -17,4 +17,5 @@ source 'https://rubygems.org'
 gem 'github-pages'
 gem 'rouge'
 gem 'jekyll-oembed', :require => 'jekyll_oembed'
+gem 'jekyll-liquify'
 # End Gemfile
