--- a/content/_data/contributors.yml
+++ b/content/_data/contributors.yml
@@ -26,7 +26,7 @@
 - name: Sean Busbey 
   apacheId: busbey
   githubId: busbey
-  role: Mentor
+  role: Former Mentor
   org: 
 
 - name: Kevin Chilton
@@ -88,6 +88,12 @@
   githubId: dnrapp
   org:
   role: Committer
+
+- name: Billie Rinaldi
+  apacheId: billie
+  githubId: 
+  org:
+  role: Mentor
 
 - name: Puja Valiyil
   apacheId: pujav65
