--- a/content/_config.yml
+++ b/content/_config.yml
@@ -19,7 +19,7 @@ excerpt_separator: ""
 
 repository: https://git-wip-us.apache.org/repos/asf/incubator-rya-site
 destination: target
-exclude: [README.md,Gemfile*]
+exclude: [README.md,Gemfile*,vendor]
 keep_files: [".git", ".svn", "apidocs"]
 
 # The base path where the website is deployed
