updated Gemfile to add jekyll Closes #8 from adinancr/removeunsecurehashes

--- a/content/Gemfile
+++ b/content/Gemfile
@@ -18,4 +18,5 @@ gem 'github-pages'
 gem 'rouge'
 gem 'jekyll-oembed', :require => 'jekyll_oembed'
 gem 'jekyll-liquify'
+gem 'jekyll'
 # End Gemfile
