--- a/content/_config.yml
+++ b/content/_config.yml
@@ -17,18 +17,17 @@ markdown: kramdown
 permalink: /news/:year/:month/:day/:title/
 excerpt_separator: ""
 
-repository: https://git-wip-us.apache.org/repos/asf/incubator-rya-site
+repository: https://github.com/apache/incubator-rya-site.git
 destination: target
 exclude: [README.md,Gemfile*,vendor]
 keep_files: [".git", ".svn", "apidocs"]
 
 # The base path where the website is deployed
 baseurl: /
-# baseurl: /Users/cs/adina/ryawebsite/target/
 
 url: http://rya.apache.org
 
-gems:
-  - jekyll-liquify
+plugins:
+ - jekyll-liquify
 # End _config.yml
 
