--- a/content/_data/project.yml
+++ b/content/_data/project.yml
@@ -15,20 +15,20 @@
 #
 # Apache Project configurations
 #
-name: Apache Rya (incubating)
+name: Apache Rya
 short_name: Rya
 unix_name: rya
 incubator_name: incubator-rya
 incubator_slash_name: incubator/rya
-description: Apache Rya (incubating) is a scalable RDF triple store built on top of a columnar index store (Apache Accumulo®).
+description: Apache Rya is a Big Data triple store that provides scalable storage, retrieval, and analysis of RDF data
 
 download: download
 
-dev_list: dev@rya.incubator.apache.org
-dev_list_subscribe: dev-subscribe@rya.incubator.apache.org
-dev_list_unsubscribe: dev-unsubscribe@rya.incubator.apache.org
+dev_list: dev@rya.apache.org
+dev_list_subscribe: dev-subscribe@rya.apache.org
+dev_list_unsubscribe: dev-unsubscribe@rya.apache.org
 dev_list_archive: http://mail-archives.apache.org/mod_mbox/rya-dev/
-dev_list_archive_mailarchive: https://www.mail-archive.com/dev@rya.incubator.apache.org/
+dev_list_archive_mailarchive: https://www.mail-archive.com/dev@rya.apache.org/
 dev_list_archive_markmail:
 
 user_list:
@@ -38,27 +38,27 @@ user_list_archive:
 user_list_archive_mailarchive:
 user_list_archive_markmail:
 
-commits_list: commits@rya.incubator.apache.org
-commits_list_subscribe: commits-subscribe@rya.incubator.apache.org
-commits_list_unsubscribe: commits-unsubscribe@rya.incubator.apache.org
+commits_list: commits@rya.apache.org
+commits_list_subscribe: commits-subscribe@rya.apache.org
+commits_list_unsubscribe: commits-unsubscribe@rya.apache.org
 commits_list_archive: http://mail-archives.apache.org/mod_mbox/rya-commits/
-commits_list_archive_mailarchive: https://www.mail-archive.com/commits@rya.incubator.apache.org/
+commits_list_archive_mailarchive: https://www.mail-archive.com/commits@rya.apache.org/
 commits_list_archive_markmail:
 
-notifications_list: notifications@rya.incubator.apache.org
-notifications_list_subscribe: notifications-subscribe@rya.incubator.apache.org
-notifications_list_unsubscribe: notifications-unsubscribe@rya.incubator.apache.org
+notifications_list: notifications@rya.apache.org
+notifications_list_subscribe: notifications-subscribe@rya.apache.org
+notifications_list_unsubscribe: notifications-unsubscribe@rya.apache.org
 notifications_list_archive: http://mail-archives.apache.org/mod_mbox/rya-notifications/
-notifications_list_archive_mailarchive: https://www.mail-archive.com/notifications@rya.incubator.apache.org/
+notifications_list_archive_mailarchive: https://www.mail-archive.com/notifications@rya.apache.org/
 notifications_list_archive_markmail:
 
 
 jira: RYA
 
-source_repository: https://git-wip-us.apache.org/repos/asf/incubator-rya.git
-source_repository_mirror: https://github.com/apache/incubator-rya
+source_repository: https://gitbox.apache.org/repos/asf/rya.git
+source_repository_mirror: https://github.com/apache/rya
 
-website_repository: https://git-wip-us.apache.org/repos/asf/incubator-rya-site.git
-website_repository_mirror: https://github.com/apache/incubator-rya-site
+website_repository: https://gitbox.apache.org/repos/asf/rya-site.git
+website_repository_mirror: https://github.com/apache/rya-site
 
-podling: true
+podling: false
