--- a/content/_data/project.yml
+++ b/content/_data/project.yml
@@ -27,7 +27,7 @@ download: download
 dev_list: dev@rya.apache.org
 dev_list_subscribe: dev-subscribe@rya.apache.org
 dev_list_unsubscribe: dev-unsubscribe@rya.apache.org
-dev_list_archive: http://mail-archives.apache.org/mod_mbox/rya-dev/
+dev_list_archive: https://mail-archives.apache.org/mod_mbox/rya-dev/
 dev_list_archive_mailarchive: https://www.mail-archive.com/dev@rya.apache.org/
 dev_list_archive_markmail:
 
@@ -41,14 +41,14 @@ user_list_archive_markmail:
 commits_list: commits@rya.apache.org
 commits_list_subscribe: commits-subscribe@rya.apache.org
 commits_list_unsubscribe: commits-unsubscribe@rya.apache.org
-commits_list_archive: http://mail-archives.apache.org/mod_mbox/rya-commits/
+commits_list_archive: https://mail-archives.apache.org/mod_mbox/rya-commits/
 commits_list_archive_mailarchive: https://www.mail-archive.com/commits@rya.apache.org/
 commits_list_archive_markmail:
 
 notifications_list: notifications@rya.apache.org
 notifications_list_subscribe: notifications-subscribe@rya.apache.org
 notifications_list_unsubscribe: notifications-unsubscribe@rya.apache.org
-notifications_list_archive: http://mail-archives.apache.org/mod_mbox/rya-notifications/
+notifications_list_archive: https://mail-archives.apache.org/mod_mbox/rya-notifications/
 notifications_list_archive_mailarchive: https://www.mail-archive.com/notifications@rya.apache.org/
 notifications_list_archive_markmail:
 
